# taint

./: Cargo.toml  LICENSE  README.md  rust-toolchain  rustup-toolchain.sh
annotations/: Cargo.toml
annotations/src/: lib.rs
src/: analysis.rs  eval.rs  lib.rs  messages.ftl  summaries.rs
src/analysis/: errors.rs  extensions.rs  mod.rs  taint_analysis.rs  taint_domain.rs
src/bins/: callback_impls.rs  driver.rs
src/eval/: attributes.rs  main.rs  mod.rs
tests/: compiletest.rs
tests/fails/: 001_simple_annotations.rs  002_interprocedural.rs  002_transitive_sink.rs  003_interprocedural_args.rs  conditional_propagation.rs  context_sensitive_handles_recursion.rs  impl_attrs.rs  interprocedural.rs  interprocedural_args.rs  plus_propagation.rs  recursion.rs  simple.rs  simple_propagation.rs  switchint.rs  wrong_attribute.rs
tests/fails/annotations/: impl_item.rs  not_valid.rs
tests/fails/stmt/assn/: binop.rs
tests/passes/: const_is_not_tainted.rs  context_sensitive_handles_recursion.rs  recursion.rs  rvalue_const_unop.rs  simple.rs  switchint.rs  switchint_is_not_sink.rs
tests/passes/annotations/: nothing.rs  sanitizer.rs  sink.rs  source.rs
tests/passes/stmt/assn/: 001_rvalue_const.rs  002_rvalue_const_unop.rs
tests/passes/tmnt/call/: 001_output_const.rs
