[package]
name = "code"
version = "0.1.0"
authors = ["Hilmar Gústafsson <LiHRaM@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "taint"
path = "src/bin/taint.rs"
test = false

[dependencies]

# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"

[dev-dependencies]
compiletest_rs = { version = "0.6", features = ["tmp"] }
rustc_version = "0.3"
colored = "2"

[package.metadata.rust-analyzer]
rustc_private=true