[package]
name = "taint"
version = "0.1.0"
authors = ["Hilmar Gústafsson <LiHRaM@users.noreply.github.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "taint"
path = "src/bins/driver.rs"
test = false

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2.18", features = ["env-filter"] }

# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"

[dev-dependencies]
compiletest_rs = { version = "0.7", features = ["tmp"] }
rustc_version = "0.3"
colored = "2"

[package.metadata.rust-analyzer]
rustc_private=true
